# domainforge-rag-peft

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml  deploy.yml
adapters/: registry.json
api/: main.py
configs/: train_dpo.yaml  train_dpo_gpu.yaml  train_qlora.yaml  train_qlora_gpu.yaml
data/eval_golden/: sample.jsonl
data/manifests/: dataset_v1.json  sop_intent_map.json
data/preferences/: train.jsonl  val.jsonl
data/sft_pairs/: test.jsonl  train.jsonl  val.jsonl
data/train_reports/: dpo_pipeline.json
docs/: DEPLOY.md  GPU_OLLAMA_PIPELINE.md  SLO.md
docs/adr/: ADR-001-rag-vs-peft-separation.md  ADR-002-dpo-after-sft.md
docs/diagrams/: canonical-architecture.mmd
domainforge/: __init__.py  config.py  finops_outcomes.py  query_trace.py
domainforge/bench/: ollama.py
domainforge/eval/: alignment.py  cli.py  harness.py  runner.py
domainforge/generation/: baseline.py  router.py
domainforge/prep/: bitext.py  chatml.py  chunk_sop.py  cli.py  intent_actions.py  manifests.py  preferences.py
domainforge/rag/: base.py  chroma_store.py  cli.py  factory.py  hybrid.py  intent_router.py  naive.py
domainforge/schemas/: __init__.py  triage.py
domainforge/serve/: gateway.py  ollama.py  vllm.py
domainforge/train/: cli.py  (+6 more)
scripts/: gpu_pipeline.sh  ollama_bench.sh
tests/: test_bitext_sample.py  test_domainforge.py  test_golden_eval_gate.py  test_llm_gateway.py  test_phase2.py  test_phase3_4.py  test_phase5_dpo.py  test_phase5_gpu.py  test_query_trace.py  test_routing_data_class.py  test_vllm_path.py
ui/: .env.production  package-lock.json  package.json  vercel.json
(+63 files in other folders)
